# light-cli

./: .gitignore  CMakeLists.txt  README.md
include/: light-cli
include/light-cli-bits/: cli_parser.hpp
src/: cli_parser.cpp
test/: main.cpp
